--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jsonwebtoken": "^7.3.0",
     "ngrx-store-freeze": "^0.1.9",
     "normalize.css": "^5.0.0",
+    "nosleep.js": "^0.7.0",
     "path": "^0.12.7",
     "rxjs": "^5.4.2",
     "ts-helpers": "^1.1.2",
