--- a/package.json
+++ b/package.json
@@ -21,16 +21,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^1.2.4",
-    "@angular/common": "^4.3.1",
-    "@angular/compiler": "^4.3.1",
-    "@angular/compiler-cli": "^4.3.1",
-    "@angular/core": "^4.3.1",
-    "@angular/forms": "^4.3.1",
-    "@angular/http": "^4.3.1",
-    "@angular/platform-browser": "^4.3.1",
-    "@angular/platform-browser-dynamic": "^4.3.1",
-    "@angular/router": "^4.3.1",
+    "@angular/animations": "^5.0.0",
+    "@angular/cli": "^1.2.6",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "@ngrx/effects": "^4.0.5",
     "@ngrx/store": "^4.0.3",
@@ -49,6 +51,7 @@
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
     "core-js": "^2.4.1",
+    "enhanced-resolve": "^3.3.0",
     "express": "^4.15.2",
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.3.0",
