--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Coach for jazz",
   "main": "server/app.js",
   "license": "MIT",
+  "engines": {
+    "node": "8.9.2"
+  },
   "scripts": {
     "start": "concurrently --kill-others \"npm run _server:run\" \"ng serve --aot --progress=false --proxy-config proxy.conf.json\"",
     "lint:client": "ng lint",
@@ -47,7 +50,7 @@
     "@types/uuid": "^2.0.29",
     "angular-2-dropdown-multiselect": "^1.6.0",
     "body-parser": "~1.17.1",
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "4.0.0-beta.2",
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
     "core-js": "^2.4.1",
